2018-07-18  Wenson Hsieh  <wenson_hsieh@apple.com>

        Add SPI to defer running async script until after document load
        https://bugs.webkit.org/show_bug.cgi?id=187748
        <rdar://problem/42317378>

        Reviewed by Ryosuke Niwa and Tim Horton.

        Add an API test to verify that when the deferred async script configuration is set, async scripts will be
        executed after the DOMContentLoaded event.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/RunScriptAfterDocumentLoad.mm: Added.
        (TEST):

2018-07-18  Charlie Turner  <cturner@igalia.com>

        [WPE] Update WPEBackend in flatpak
        https://bugs.webkit.org/show_bug.cgi?id=187753

        r233763 updated WPEBackend for the jhbuild, but not the flatpak. This
        caused WPE_BACKEND_CHECK_VERSION to not be defined, triggering a bug
        in the version guard,

        #if defined(WPE_BACKEND_CHECK_VERSION) && WPE_BACKEND_CHECK_VERSION(0, 2, 0)

        This doesn't work as intended, since the C preprocessor first expands
        all macro arguments in the #if expression before evaluating the
        expression. When WPE_BACKEND_CHECK_VERSION is not defined, this will
        lead to a syntax error and some head scratching.

        A future patch should address the buggy macro check, when it is
        decided whether the assume the macro is always defined and bump
        the API requirements on WPEBackend, or to move the check into two
        conditionals to avoid the expansion problem.

        Unreviewed build fix.
        
        * flatpak/org.webkit.WPE.yaml:

2018-07-18  Simon Fraser  <simon.fraser@apple.com>

        Fix the parsing of colors in attributed string tests, and make it possible to dump the typing attributes
        https://bugs.webkit.org/show_bug.cgi?id=187747

        Reviewed by Ryosuke Niwa.
        